# AeroDrift

./: README.md  aerodrift.ipynb  pyproject.toml
datasets/RUL/: readme.txt
models/: lgb_model.txt
src/api/: main.py  simulator.py
src/data/: preprocess.py
src/models/: evaluate.py  train.py
